Fix styling in Footer acknowledgement section to correctly align text items

--- a/packages/react-components/src/components/Footer/Footer.css
+++ b/packages/react-components/src/components/Footer/Footer.css
@@ -15,7 +15,7 @@
   border-bottom: var(--layout-border-width-large) solid
     var(--surface-brand-gold-60);
   background-color: var(--surface-brand-gray-110);
-  width: 100%;
+  padding: var(--layout-padding-xlarge);
 }
 
 .bcds-footer
@@ -28,7 +28,7 @@
   color: var(--typography-color-primary-invert);
   font: var(--typography-regular-label);
   max-width: 1100px;
-  padding: var(--layout-padding-xlarge);
+  width: 100%;
 }
 
 .bcds-footer
@@ -216,9 +216,7 @@ p.bcds-footer--copyright {
 
 /* Extra small screens */
 @media (max-width: 575px) {
-  .bcds-footer
-    > .bcds-footer--acknowledgement
-    > .bcds-footer--acknowledgement-text {
+  .bcds-footer > .bcds-footer--acknowledgement {
     padding: var(--layout-padding-xlarge) var(--layout-padding-medium);
   }
 
